--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         </ul>
     </div>
     <section id="main">
+        <h2 class="blind">메인</h2>
         <article id="best">
             <h2>best</h2>
             <ul class="bestList">
